--- a/stylea.css
+++ b/stylea.css
@@ -23,6 +23,8 @@
   justify-content: center;
   flex-wrap: wrap;
   height: 100%;
+
+  
 }
 
 .left {
@@ -47,7 +49,7 @@ canvas {
   width: 100%;
   height: 100%;
   background: rgb(12, 59, 124);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(16,62,125,1) 0%, rgba(24,106,220,1) 100%);
+  background: linear-gradient(135deg, #0c61d8 0%, #041f60 100%);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
